# GrooveHub

./: .env.example  .gitignore  README.md  pyproject.toml
metrics/: metrics.json
reports/: PI_report_en.md  PI_report_es.md
src/groovehub/agent/: core.py  prompts.py
src/groovehub/agent/prompts/: main_prompt.py
src/groovehub/cli/: main.py
src/groovehub/guardrails/: safety.py
src/groovehub/models/: __init__.py  response.py
src/groovehub/observability/: metrics.py
src/groovehub/services/: llm.py
tests/: test_core.py
