[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "groovehub"
version = "0.1.0"
description = "A robust CLI-based AI Assistant for music instrument advisory, featuring strict type validation, real-time metrics, and multi-provider LLM support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "openai>=2.20.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
groove = "groovehub.cli.main:main"

